--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,13 @@ streamlit
 pandas
 plotly
 matplotlib
+numpy
 seaborn
 reportlab
 Pillow
 statsmodels
+beautifulsoup4
+requests
+ollama
 openpyxl>=3.1.0
 xlrd>=2.0.1
