--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,8 @@
 [server]
 # Puerto donde correrá la aplicación
 port = 8501
+maxUploadSize = 200
+maxMessageSize = 200
 
 # Habilitar CORS (necesario si enableXsrfProtection está activo)
 enableCORS = true
