--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-streamlit==1.28.1
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.17.0
-matplotlib==3.7.2
-seaborn==0.12.2
-Pillow==10.0.1
-beautifulsoup4==4.12.2
-requests==2.31.0
-openpyxl==3.1.2
-xlrd==2.0.1
-psutil==5.9.5
-lxml==4.9.3
+﻿streamlit
+pandas
+numpy
+plotly
+matplotlib
+seaborn
+Pillow
+beautifulsoup4
+requests
+openpyxl>=3.1.0
+xlrd>=2.0.1
+psutil
+lxml
+mplsoccer
